--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1589.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.4.0"
+    "mongodb": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0"
   }
 }
