--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "build" : "npm i"
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +21,8 @@
     "mongodb": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
